--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "@astrojs/cloudflare": "^11.0.4",
     "astro": "^4.15.5",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
