--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.3",
+    "@astrojs/check": "0.8.0",
     "@astrojs/cloudflare": "^11.0.4",
-    "astro": "^4.15.5",
-    "typescript": "^5.6.2"
+    "astro": "4.11.5",
+    "typescript": "5.4.5"
   },
-  "devDependencies": {
-    "prettier": "2.8.7",
-    "prettier-plugin-astro": "^0.14.1"
+  "engines": {
+    "node": "20.x"
   }
+  
 }
