--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "0.8.0",
-    "@astrojs/cloudflare": "^11.0.4",
-    "astro": "4.11.5",
-    "typescript": "5.4.5"
+    "@astrojs/check": "^0.9.3",
+    "@astrojs/cloudflare": "^11.1.0",
+    "@astrojs/svelte": "^5.7.1",
+    "astro": "^4.15.9",
+    "chart.js": "^4.4.4",
+    "svelte": "^4.2.19",
+    "typescript": "^5.6.2"
   },
   "engines": {
     "node": "20.x"
+  },
+  "devDependencies": {
+    "@types/chart.js": "^2.9.41"
   }
-  
 }
