--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,15 @@
-{
+/*{
   "extends": "astro/tsconfigs/strict"
+}*/
+{
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "strict": true
+  },
+  "include": ["src/**/*"]
 }
